import fs from 'node:fs/promises'
import path from 'node:path'
import { rolldownBuild } from '@sxzz/test-utils'
import { describe, expect, test } from 'vitest'
import { dts } from '../src/index.ts'
import { findSourceMapChunk } from './utils.ts'

const { dirname } = import.meta

function slash(path: string) {
  return path.replaceAll('\\', '/')
}

describe('tsc', () => {
  test('typescript compiler', async () => {
    const root = path.resolve(dirname, 'fixtures/tsc')
    const { snapshot } = await rolldownBuild(
      [path.resolve(root, 'entry1.ts'), path.resolve(root, 'entry2.ts')],
      [
        dts({
          emitDtsOnly: true,
          compilerOptions: {
            skipLibCheck: true,
            isolatedDeclarations: false,
          },
          generator: 'tsc',
        }),
      ],
    )
    expect(snapshot.replaceAll(/\/\/#region.*/g, '')).toMatchSnapshot()
  })

  test('multi declarations', async () => {
    const { snapshot } = await rolldownBuild(
      path.resolve(dirname, 'fixtures/multi-decls/index.ts'),
      [
        dts({
          emitDtsOnly: true,
          compilerOptions: { isolatedDeclarations: false },
        }),
      ],
    )
    expect(snapshot).toMatchSnapshot()
  })

  test('references', async () => {
    const root = path.resolve(dirname, 'fixtures/refs')

    const { snapshot } = await rolldownBuild(
      [path.resolve(root, 'src/index.ts')],
      [
        dts({
          tsconfig: path.resolve(root, 'tsconfig.json'),
          compilerOptions: { isolatedDeclarations: false },
          build: true,
        }),
      ],
    )

    expect(snapshot).toMatchSnapshot()
  })

  test('compiler project sourcemap (build: false)', async () => {
    const root = path.resolve(dirname, 'fixtures/deep-source-map')
    const { snapshot, chunks } = await rolldownBuild(
      [path.resolve(root, 'src/index.ts')],
      [
        dts({
          tsconfig: path.resolve(root, 'tsconfig.json'),
          sourcemap: true,
          build: false,
        }),
      ],
      {},
      { dir: path.resolve(root, 'dist') },
    )
    const sourcemap = findSourceMapChunk(chunks, 'index.d.ts.map')
    expect(sourcemap.sourceRoot).toBeFalsy()
    expect(sourcemap.sources).toMatchInlineSnapshot(`
      [
        "../src/index.ts",
      ]
    `)
    expect(snapshot).toMatchSnapshot()
  })

  test('compiler project sourcemap (build: true)', async () => {
    const root = path.resolve(dirname, 'fixtures/deep-source-map')
    const { snapshot, chunks } = await rolldownBuild(
      [path.resolve(root, 'src/index.ts')],
      [
        dts({
          tsconfig: path.resolve(root, 'tsconfig.json'),
          sourcemap: true,
          build: true,
        }),
      ],
      {},
      { dir: path.resolve(root, 'dist') },
    )
    const sourcemap = findSourceMapChunk(chunks, 'index.d.ts.map')
    expect(sourcemap.sourceRoot).toBeFalsy()
    expect(sourcemap.sources).toMatchInlineSnapshot(`
      [
        "../src/index.d.ts",
      ]
    `)
    expect(snapshot).toMatchSnapshot()
  })

  test('composite projects sourcemap #80', async () => {
    const root = path.resolve(dirname, 'fixtures/composite-refs-sourcemap')

    const { chunks } = await rolldownBuild(
      [path.resolve(root, 'src/react/index.ts')],
      [
        dts({
          tsconfig: path.resolve(root, 'tsconfig.react.json'),
          build: true,
          sourcemap: true,
          emitDtsOnly: true,
        }),
      ],
      {},
      { dir: path.resolve(root, 'actual-output/react') },
    )

    const sourcemap = findSourceMapChunk(chunks, 'index.d.ts.map')
    const sources = sourcemap.sources || []
    const expectedSources = ['../../src/types.ts', '../../src/react/index.ts']
    expect(sources.toSorted()).toEqual(expectedSources.toSorted())
    expect(sourcemap.sourcesContent).toBeOneOf([undefined, []])
  })

  test('composite references no incremental', async () => {
    const root = path.resolve(dirname, 'fixtures/composite-refs-no-incremental')

    // The outDir in tsconfig files.
    const tempDir = path.resolve(root, 'temp')

    // Ensure .tsbuildinfo files do not exist before the test
    await fs.rm(tempDir, { recursive: true, force: true })

    const { snapshot } = await rolldownBuild(
      [
        path.resolve(root, 'dir1/input1.ts'),
        path.resolve(root, 'dir2/input2.ts'),
      ],
      [
        dts({
          tsconfig: path.resolve(root, 'tsconfig.json'),
          compilerOptions: { isolatedDeclarations: false },
          build: true,
        }),
      ],
    )
    expect(snapshot).toMatchSnapshot()

    // Ensure .tsbuildinfo files are not created after the test
    const tsBuildInfoFiles = await Array.fromAsync(
      fs.glob('**/*.tsbuildinfo', {
        cwd: tempDir,
      }),
    )
    expect(tsBuildInfoFiles).toHaveLength(0)
  })

  test('composite references incremental', async () => {
    const root = path.resolve(dirname, 'fixtures/composite-refs-incremental')

    // The outDir in tsconfig files.
    const tempDir = path.resolve(root, 'temp')

    // Ensure .tsbuildinfo files do not exist before the test
    await fs.rm(tempDir, { recursive: true, force: true })

    const { snapshot } = await rolldownBuild(
      [
        path.resolve(root, 'dir1/input1.ts'),
        path.resolve(root, 'dir2/input2.ts'),
      ],
      [
        dts({
          tsconfig: path.resolve(root, 'tsconfig.json'),
          compilerOptions: { isolatedDeclarations: false },
          build: true,
        }),
      ],
    )
    expect(snapshot).toMatchSnapshot()

    // Ensure .tsbuildinfo files are created after the test
    const tsBuildInfoFiles = await Array.fromAsync(
      fs.glob('**/*.tsbuildinfo', {
        cwd: tempDir,
      }),
    )
    expect(tsBuildInfoFiles.map(slash).toSorted()).toMatchInlineSnapshot(`
      [
        "dir1/tsconfig.1.tsbuildinfo",
        "dir2/tsconfig.2.tsbuildinfo",
      ]
    `)
  })

  test('jsdoc', async () => {
    const { snapshot } = await rolldownBuild(
      path.resolve(dirname, 'fixtures/jsdoc.ts'),
      [dts({ generator: 'tsc' })],
      { external: ['rolldown'] },
    )
    expect(snapshot).toMatchSnapshot()
  })

  test.fails('jsdoc in js', async () => {
    const root = path.resolve(dirname, 'fixtures/jsdoc-js')
    const { snapshot } = await rolldownBuild(path.resolve(root, 'main.js'), [
      dts({
        tsconfig: path.resolve(root, 'tsconfig.json'),
        emitDtsOnly: true,
      }),
    ])
    expect(snapshot).toMatchSnapshot()
  })

  test('arktype', async () => {
    const { snapshot } = await rolldownBuild(
      path.resolve(dirname, 'fixtures/arktype.ts'),
      [
        dts({
          compilerOptions: {
            isolatedDeclarations: false,
          },
          emitDtsOnly: true,
        }),
      ],
      { external: [/^arktype/] },
    )
    expect(snapshot).toMatchSnapshot()
  })

  test('import JSON', async () => {
    const { snapshot } = await rolldownBuild(
      path.resolve(dirname, 'fixtures/import-json/index.ts'),
      [
        dts({
          compilerOptions: {
            isolatedDeclarations: false,
          },
          emitDtsOnly: true,
        }),
      ],
    )

    expect(snapshot).toMatchSnapshot()
  })

  describe('resolve paths', () => {
    test.each(['oxc', 'tsc'] as const)('resolver: %s', async (resolver) => {
      const root = path.resolve(dirname, 'fixtures/paths')
      const { snapshot } = await rolldownBuild(path.resolve(root, 'index.ts'), [
        dts({
          generator: 'oxc',
          emitDtsOnly: true,
          tsconfig: path.resolve(root, 'tsconfig.json'),
          resolver,
        }),
      ])
      expect(snapshot).toMatchSnapshot()
    })
  })

  test('rename infer', async () => {
    const { snapshot } = await rolldownBuild(
      path.resolve(dirname, 'fixtures/infer-renaming.ts'),
      [
        dts({
          compilerOptions: {
            isolatedDeclarations: false,
          },
          emitDtsOnly: true,
        }),
      ],
      { external: ['zod'] },
    )
    expect(snapshot).toMatchSnapshot()
  })

  test('accessor in type literal', async () => {
    const { snapshot } = await rolldownBuild(
      path.resolve(dirname, 'fixtures/accessor-in-type-literal.ts'),
      [
        dts({
          generator: 'tsc',
          emitDtsOnly: true,
          compilerOptions: { isolatedDeclarations: false },
        }),
      ],
    )
    expect(snapshot).toMatchSnapshot()
  })
})
